--- a/Agenda/9-16-23.md
+++ b/Agenda/9-16-23.md
@@ -1,2 +1,9 @@
-Need to wrap up the draft. I feel all the pieces are thought through. Nothing left to do but to write. Amen.
+1. Draft - have it done today.
+2. Design the website (super minimal. Make it quick).
+3. Get the draft on the site (/draft/college-outdated).
+4. Start the next essay. Need to start doing things in parallel, else it will take too long.
+
+----
+
+
 
