--- a/Agenda/9-17-23.md
+++ b/Agenda/9-17-23.md
@@ -4,3 +4,12 @@
 4. Start working on next essay. Freeze the upcoming 3 essays and quickly churn out blurbs for them to validate the positioning.
 
 You don't have the time you think you have. Grind and get this out asap.
+
+----
+
+Essay next steps:
+- Concluding thoughts
+- The entire intro section: now that you've talked about everything you want to, start the essay with a powerful bang that lets the reader know what's to come, and gets them excited for the journey. Amen.
+
+With this, the first draft will be done. Then it's time for the rounds of iterations. At this point, focus on getting the website ready before you start the iterations. I want to see the essay in its final form as I edit it. Amen.
+
