--- a/Agenda/9-23-23.md
+++ b/Agenda/9-23-23.md
@@ -3,5 +3,5 @@
 
 (Dictation sessions).
 
-1. Sculpt a draft of "Skills that matter".
-2. Finally, get back to the "Why college is outdated" essay.
+1. Sculpt drafts of "Skills that matter", and one more essay (pick from the dictation transcriptions).
+2. Finally, get back to the "Why college is outdated" essay. (you'll likely need a dictation here)
