--- a/0-Rough/2024-05-14.md
+++ b/0-Rough/2024-05-14.md
@@ -1,3 +1,40 @@
+Next steps:
+1. Complete the draft with the appropriate footnotes with the right pruning of subtrees. Ensure that the essence of what you're trying to say is communicated.
+2. Simplify, and make more concise. Ruthlessly what is not serving the purpose.
+3. Tweak.
+
+I predict that you can get to a draft by the end of the day today. Strive for it. The sooner you send to others for feedback, the sooner you'll be able to get it to a publishable stage. And remember, there is work to be done to publish it.
+
+...
+
+The ideas are truly flowing. They will only flow with a balanced mind. Keep the mind as balanced as you can. Let go. Surrender.
+
+...
+
+I have a great responsibility that I can only fulfill to the best of my ability by training my mind to be more balanced. Mental training is not just for my own peace, but also for what I can contribute to the world, and to those that come after us. I feel it's my responsibility because I've been given certain latent talents and privileges that make me feel guilty if I don't give back to the universe in some way. Absolutely.
+
+...
+
+The mind is latching more strongly. But the downside is that when it latches onto a distraction, it also latches onto it more strongly. The more powerful the mind, the more I have to be careful where I let it go.
+
+...
+
+What comes next? This essay is coming together well, but don't let up. Lean into it and see through a solid draft today. Amen.
+
+...
+
+The right flow is to start all thinking in the daily page. Only when the thought is ready to graduate from the daily page will I create a separate page for it. Not all thoughts are substantial enough to warrant their own page.
+
+Even put essay brainstorming / thinking in the daily page. I really like this. Eventually it may be that everything in rough is just daily notes. That's fine.
+
+...
+
+OK, I think the essay is coming along well. There's just one section I'm going to flesh out and then I'll do a thorough review from top to bottom.
+
+I'm proud of how I've been able to keep this essay contained, and I'm better able to put tempting subtree references in the footnotes. Otherwise I wouldn't be able to complete this.
+
+...
+
 **Write**. Jump back into the writing quickly. Focus on curbing distraction today better than before. I still have a lot of room for improvement to keep the mind where I want it to be.
 
 That's it. There's really nothing else that I'd want to do. Just write.
