--- a/0-Rough/2024-05-14.md
+++ b/0-Rough/2024-05-14.md
@@ -1,3 +1,11 @@
+Some thoughts on publishing essay:
+
+1. I'd like to publish straight from this repository. I.e. updating a file in the Essays folder should reflect on jisnu.org.
+2. Things I need before publishing first essay: 
+	1. "About me" page. Simple but powerful, and honest.
+	2. "I'd appreciate your feedback" page. (this will be a hidden page that is only referenced from each and every essay.) This is quite important because it will push for better feedback - which is critically important.
+...
+
 Next steps:
 1. Complete the draft with the appropriate footnotes with the right pruning of subtrees. Ensure that the essence of what you're trying to say is communicated.
 2. Simplify, and make more concise. Ruthlessly what is not serving the purpose.
