--- a/0-Rough/2024-05-17.md
+++ b/0-Rough/2024-05-17.md
@@ -1,7 +1,20 @@
-3. How to give me feedback.
-4. Deployment: create a system with a single source of truth. Should be able to write and deploy in a straightforward way. - Think this through, and set up the site to embody the sanctity of high quality knowledge. Minimal. Light. The perfect fonts. Everything must make a visitor feel their latent thirst for learning. => there's a design aspect here as well that I need to think through.
+What are the next steps here?
+1. Build database of great thinkers. Keep the bar exceptionally high. Like, stupidly high. I suspect the more powerful thinkers will be younger. Bias towards them. There is actually an exceptionally long list of folks. Keep attacking relentlessly until you start getting good feedback. Amen.
+2. Plan the next steps.
 
----
+...
+
+Damn, alright. I think it looks set. I'm going to send it out this eve. Amen.
+
+...
+
+Next: do a careful pass of the essay. Remember, this has to be done before you eat the meal. After food, you won't have the mind to do this deep work. Amen.
+
+...
+
+What to do with the footnotes?
+
+...
 
 What is the mental cost of these (which determines the order of operations) ?
 1. Draft
