--- a/0-Rough/2024-05-24.md
+++ b/0-Rough/2024-05-24.md
@@ -1,3 +1,8 @@
+1. Get through the essay. I see the path to a compelling essay. Craft it. Tighten it as much as possible. Ship it tonight to the world.
+2. Tighten the feedback page as well. It's waaaaay too long. Stupidly so.
+
+---
+
 Be patient. I know you're craving to express through film. But wait for the right time. Need to wait for AI to improve a couple of levels (i.e. SORA to be launched and easy to use). Position yourself to be able to shift to whatever you want. This is why it's important to really grasp writing because that is the foundation for any creative endeavor: it is the translation of feeling into something you can work with and communicate. This is the essence. And words are a great starting point to describe feeling.
 
 The most important skill as we move into this new world is to be able to understand your feelings. The practice is more essential than ever before.
