--- a/0-Rough/2024-05-26.md
+++ b/0-Rough/2024-05-26.md
@@ -1,2 +1,8 @@
 
-Next essay is clear: "Develop a feel for something".
+1. Knock out draft of /intuition. Aim to publish this in a couple of days. And then focus on the "Paying for education is a trap" essay. It's time to increase the cadence.
+
+And that's all that I'm going to do. The path is quite straightforward. I'm just going to keep writing to craft my ideas. This is all I'm going to focus on for the foreseeable future. Ideas ideas ideas. That's it.
+
+One by one uncover the way to educate yourself. This is certainly a series of essays. See it through. Only good things will come when you do.
+
+Yeah, this is quite interesting. Can't sleep.
